functiondemo/s1.yaml
apiVersion: v1
kind: Service
metadata:
  name: function-leave-http
  namespace: ingress-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: function-leave-http
  type: ClusterIP
