functiondemo/funcingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: function-helloworld
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:  
  rules:
    - host: functiondemo.centralindia.cloudapp.azure.com
      http:
        paths:
        - pathType: Prefix
          backend:
                  service:
                          name: function-helloworld-http
                          port:
                                number: 80
          path: /demo(/|$)(.*)
        - pathType: Prefix
          backend:
                  service:
                          name: function-leave-http
                          port:
                                number: 80
          path: /leave(/|$)(.*)
